--- a/UPSTAC-Week3-assignment/src/main/resources/application.properties
+++ b/UPSTAC-Week3-assignment/src/main/resources/application.properties
@@ -3,7 +3,7 @@ token.secret=UpgradUPSTAC@%^%@^!@$!@$@#$#$#6763276327
 
 ##kitematic mysql server
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=24M@y!996
 spring.datasource.url=jdbc:mysql://localhost:3306/upgradpg
 
 spring.jpa.hibernate.ddl-auto=update
